--- a/public/index.css
+++ b/public/index.css
@@ -4,7 +4,7 @@ body {
 
 img {
     /* Start the shake animation and make the animation last for 0.5 seconds */
-    animation: shake 0.5s; 
+    animation: shake 2s; 
   
     /* When the animation is finished, start again */
     animation-iteration-count: infinite; 
@@ -12,37 +12,16 @@ img {
   
 @keyframes shake {
     0% { 
-        transform: translate(1px, 1px) rotate(0deg); 
+        transform: translate(0px, 0px); 
     }
-    10% { 
-        transform: translate(-1px, -2px) rotate(-1deg); 
+    25% {
+        transform: translate(20px, 0px);
     }
-    20% { 
-        transform: translate(-3px, 0px) rotate(1deg); 
+    75% { 
+        transform: translate(-20px, 0px); 
     }
-    30% { 
-        transform: translate(3px, 2px) rotate(0deg); 
-    }
-    40% { 
-        transform: translate(1px, -1px) rotate(1deg); 
-    }
-    50% { 
-        transform: translate(-1px, 2px) rotate(-1deg); 
-    }
-    60% { 
-        transform: translate(-3px, 1px) rotate(0deg); 
-    }
-    70% { 
-        transform: translate(3px, 1px) rotate(-1deg); 
-    }
-    80% { 
-        transform: translate(-1px, -1px) rotate(1deg); 
-    }
-    90% { 
-        transform: translate(1px, 2px) rotate(0deg); 
-    }
-    100% { 
-        transform: translate(1px, -2px) rotate(-1deg); 
+    100% {
+        transform: translate(0px, 0px);
     }
 }
 
@@ -56,17 +35,17 @@ img {
     line-height: 0;
         
     -webkit-column-count: 4;
-    -webkit-column-gap:   20px;
+    -webkit-column-gap:   0px;
     -moz-column-count:    4;
-    -moz-column-gap:      20px;
+    -moz-column-gap:      0px;
     column-count:         4;
-    column-gap:           20px;  
+    column-gap:           0px;  
 }
   
 #photos img {
     /* Just in case there are inline attributes */
     width: 100% !important;
-    height: 50% !important;
+    height: 30% !important;
 }
 
 @media (max-width: 1200px) {
