--- a/public/index.css
+++ b/public/index.css
@@ -70,3 +70,13 @@ img {
     margin-right: 20px;
     margin-bottom: 20px;
 }
+
+.credits > p {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    margin-left: 15px;
+    margin-bottom: 5px;
+    font-size: 80%;
+    font-family: 'Futura';
+}
